# shared_autonomy

./: CMakeLists.txt  README.md  package.xml
T-RO20 CVXgen/No delay/cvxgen/: Makefile  csolve.c  csolve.m  cvxsolve.m  description.cvxgen  ldl.c  make_csolve.m  matrix_support.c  solver.c  solver.h  testsolver.c  util.c
T-RO20 CVXgen/Single tank/1/cvxgen/: Makefile  csolve.c  csolve.m  cvxsolve.m  description.cvxgen  ldl.c  make_csolve.m  matrix_support.c  solver.c  solver.h  testsolver.c  util.c
T-RO20 CVXgen/Single tank/2/cvxgen/: Makefile  csolve.c  csolve.m  cvxsolve.m  description.cvxgen  ldl.c  make_csolve.m  matrix_support.c  solver.c  solver.h  testsolver.c  util.c
T-RO20 CVXgen/Single tank/3/cvxgen/: description.cvxgen  solver.c  solver.h
T-RO20 CVXgen/With delay/1/cvxgen/: Makefile  csolve.c  csolve.m  cvxsolve.m  description.cvxgen  ldl.c  make_csolve.m  matrix_support.c  solver.c  solver.h  testsolver.c  util.c
backup/cvxgen-prob-multitank/: Makefile  csolve.c  csolve.m  cvxsolve.m  description.cvxgen  ldl.c  make_csolve.m  matrix_support.c  solver.c  solver.h  testsolver.c  util.c
backup/cvxgen-prob-singletank/: Makefile  csolve.c  csolve.m  ldl.c  testsolver.c
cfg/: SharedAutonomy.cfg  formation_params.yaml
config/: formation_params.yaml
include/: turtle_control.h
launch/: arena.launch  multi_tb3.launch  params.launch  tb3_optitrack.launch
lib/: cvxsolve.m  make_csolve.m  matrix_support.c  util.c
src/: turtle_control.cpp  turtle_control_node.cpp
worlds/: arena.world  sim_tro.world  two_cubes.world
(+24 files in other folders)
